@@ -34,6 +34,10 @@ Version 7
 
 --Added tool-tip text explaining each power-up.
 
+--Fixed tutorial to wait until you rise back to where you started before 
+  displaying the next (You can also enter...) tip.
+
+
 
 
 Version 6    2011-January-29
